--- a/imdb_scrape.Rmd
+++ b/imdb_scrape.Rmd
@@ -7,48 +7,59 @@ output: html_notebook
 library(rvest)
 ```
 
-```{r}
-# scrape top 100 most popular films' page links
+```{r scrape 100 most populat films based on rating}
+# Source: IMDb Charts: Most Popular Movies
+# Determined by IMDb Users and sorted by Ranking
+
+# Scrape HTML content from a given URL
 parsed_url <- read_html("https://www.imdb.com/chart/moviemeter/?ref_=nv_mv_mpm")
-xp1 <- "//*[@id=\"main\"]/div/span/div/div/div[3]/table/tbody/tr/td[2]/a/@href"
-parsed_nodes <- html_nodes(parsed_url, xpath = xp1) 
-page_links_df <- as.data.frame(html_text(parsed_nodes))
-page_links_df[1:3, ]
 
-# add imdb.com to beginning of link
+# Call node based on xpath
+title_nodes <- html_nodes(parsed_url, "a+ .secondaryInfo , #main a")
 
-```
-
-Don't run this unless you know you have time (> 5min).
-```{r  }
-nodes <- html_nodes(parsed_url, "#main a")
-nodes <- nodes[-1] # get rid of NA
-# Get titles
-titles <- html_text(nodes, trim = TRUE)
-titles <- unique(titles) # for some reason, there are nodes with nothing but "", which I excluded here
-#titles <- titles[-1] # another NA???
+# Strip the HTML tags and extract title and year 
+titles <- html_text(title_nodes)
 
 # Create imdb links to scrape through  
+nodes <- html_nodes(parsed_url, "#main a")
 sub_urls <- html_attr(nodes, 'href') # extract parts of the link 
-m_urls <- paste0('http://www.imdb.com', sub_urls) # Concatenate with part that is missing from link
+sub <- sub_urls[!is.na(sub_urls)]
+m_urls <- paste0('http://www.imdb.com', sub) # Concatenate with part that is missing from link
 
-# adapted function from stackoverflow to get description of a movie 
+# Function to scrape description 
 getdescription <- function(url){
   page <- read_html(url)
   nodes <- html_nodes(page, 'p span')
-  cast <- html_text(nodes, trim = TRUE)
+  cast <- html_text(nodes)
   return(cast)
 }
+
+closeAllConnections()
 
 # Use lapply() to apply the getdescription() function to each URL 
 description <- lapply(m_urls, getdescription)
 # Get rid of duplicates
 desc <- unique(description)
 
-dat <- data.frame(cbind(titles, desc))
-
-# Issues to be solved: scraping the links isn't perfect and actually includes a lot of NA's and one annoying missing movie title 
+closeAllConnections()
 ```
 
+```{r build dataframe}
+# Remove blanks 
+col <- titles[!titles %in% c("", " ")]
+
+# Create dataframe 
+col1 <- as.data.frame(matrix(col, ncol = 2, byrow = TRUE), 
+                      stringsAsFactors = FALSE)
+
+# Remove brackets 
+col2[] <- lapply(col1, function(x) gsub("[][(),]", "", x))
+
+# Define column names
+colnames(col2) <- c("Title", "Year")
+
+# Add description column
+col3 <- transform(col2, Description =sapply(desc, paste0, collapse=','))
 
 
+```
